[package]
name = "bevy_cell"
version = "0.13.0"
edition = "2021"
license = "MIT OR Apache-2.0"

authors = ["Dekirisu <dekirisu@gmail.com>"]
description = "Attach Bevy's Handles/Entities statically to Types."
keywords = ["static"]
categories = ["rust-patterns", "memory-management"]

repository = "https://github.com/dekirisu/bevy_cell"
documentation = "https://docs.rs/bevy_cell"

[dependencies]
type_cell = "0.3"
hashbrown = "0.14"

[dev-dependencies]
bevy = "0.12" 